--- a/ShareCameraQt.ui
+++ b/ShareCameraQt.ui
@@ -67,7 +67,11 @@
         <height>501</height>
        </rect>
       </property>
-      <layout class="QGridLayout" name="gridLayout"/>
+      <layout class="QGridLayout" name="gridLayout">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetDefaultConstraint</enum>
+       </property>
+      </layout>
      </widget>
     </widget>
    </widget>
